Se ha agregado mas relleno

--- a/consoles.html
+++ b/consoles.html
@@ -47,6 +47,47 @@
         <div class="contenido">
             <section class="main">
                 <h1 class="tittle tittle-style">CONSOLAS</h1>
+                <article class="article-news">
+                    <h2>El gigante chino Tencent presenta TGP Box, su propio sistema de juegos</h2>
+                    <img src="img/consoles/newconsole.jpg" alt="" />
+                    <p>
+                        Tencent, la compañía propietaria del exitoso League of Legends (compraron al estudio Riot Games y en 2012 parte de las acciones de Epic Games), ha anunciado el lanzamiento de su propio sistema de juegos en el mercado chino. El hardware se ha presentado
+                        en el Consumer Electronics Show (CES) de Shanghái. Tencent es un holding empresarial chino con fuertes inversiones en telecomunicaciones en el mercado asiático y ahora han presentado un sistema de juegos, llamado TGP Box (Tencent
+                        Games Platform) con procesadores Intel Core de sexta generación y capaz de ejecutar, como un PC estándar, Windows 10. El sistema cuenta con un modo de uso llamado TGP Box que permite acceder al catálogo de juegos de las compañías
+                        de Tencent y aquellos que distribuye en Asia a través de sus acuerdos con empresas occidentales como Take-Two o Electronic Arts. También permite acceder a un servicio de vídeo en stream. Entre los juegos anunciados están League
+                        of Legends, FIFA Online 3, NBA 2K Online, Monster Hunter Online y Need for Speed: Hot Pursuit Tournament. Por ahora, la TGP Box se presenta como un producto pensado específicamente para el mercado chino y no se ha indicado ningún
+                        tipo de plan para lanzar el hardware en los mercados occidentales.
+                    </p>
+                    <div class="options">
+                        <div class="options-social">
+                            Compartir:
+                            <a href="https://www.facebook.com/" target="_blank"><span class="icon-facebook2"></span></a>
+                            <a href="https://twitter.com" target="_blank"><span class="icon-twitter"></span></a>
+                            <a href="https://plus.google.com" target="_blank"><span class="icon-google-plus2"></span></a>
+                        </div>
+                    </div>
+                </article>
+                <article class="article-news">
+                    <h2>Nuevos rumores sitúan a NX lejos de la arquitectura x86</h2>
+                    <img src="img/consoles/nintendo-nx.jpg" alt="" />
+                    <p>
+                        Con un lanzamiento previsto para marzo de 2017 y la decisión de Nintendo de no presentar su próxima consola, NX, en el E3 de junio, los rumores sobre la plataforma van a seguir acumulándose todavía durante un tiempo, al menos hasta que la compañía haga
+                        finalmente anuncios oficiales, lo que se espera que suceda antes de que termine este año. Ahora han vuelto a surgir rumores sobre la potencia de la próxima consola y la sitúan en un rango próximo al de Xbox One y quizás lejos de
+                        la arquitectura de procesadores x86, es decir, la estándar del mundo del PC y que han adoptado ya Sony y Microsoft en PS4 y Xbox One. Emily Rogers ha señalado que diversas fuente han indicado que "NX no usará arquitectura x86 como
+                        PlayStation 4 y Xbox One", lo que afirma después de contactar con siete fuentes diferentes. Según Rogers, "NX tiene procesadores especiales y personalizados y el diseño general del hardware es muy moderno. Los chips son punteros
+                        en la industria al ser muy modernos, pero no esto no significa que se haya buscado crear el hardware más poderoso del mercado". De hecho, rechaza todos los rumores que habían sugerido que la consola podría utilizar la nueva tecnología
+                        gráfica de AMD, Polaris. "En lo referente al poder bruto, varias fuentes me dicen que NX está más cerca de Xbox One que de PS4". Una de las razones que parecía impulsar el rumor de la arquitectura x86 era, en esencia, facilitar
+                        la adaptación de títulos a las compañías externas al compartir la misma arquitectura que el PC y las actuales consolas de Sony y Microsoft.
+                    </p>
+                    <div class="options">
+                        <div class="options-social">
+                            Compartir:
+                            <a href="https://www.facebook.com/" target="_blank"><span class="icon-facebook2"></span></a>
+                            <a href="https://twitter.com" target="_blank"><span class="icon-twitter"></span></a>
+                            <a href="https://plus.google.com" target="_blank"><span class="icon-google-plus2"></span></a>
+                        </div>
+                    </div>
+                </article>
                 <article id="nostalgic" class="article-news">
                     <h2>Ediciones de consolas solo para nostálgicos</h2>
                     <img src="img/consoles/nostalgic.jpg" alt="" />
@@ -118,6 +159,28 @@
                         Dos décadas no se cumplen todos los días, y Nintendo quiso dejar constancia del 20 aniversario de sus pioneros sistemas de los 80 en 2005 con varias ediciones especiales. Ya hemos visto a la GBA SP vestida de Famicom, pero es que la gran N vistió también
                         a la recién estrenada –ya en plena era DS- Game Boy Micro, que parecía talmente el mando 1 de la Famicom original con ese diseño rojo y el brillo dorado del aniversario. Es una pena que la GB Micro no fuese precisamente compatible
                         con el hardware de GB y GB Color, pero al menos sí lo era con el catálogo GBA, aunque DS la tapó en ventas.
+                    </p>
+                    <div class="options">
+                        <div class="options-social">
+                            Compartir:
+                            <a href="https://www.facebook.com/" target="_blank"><span class="icon-facebook2"></span></a>
+                            <a href="https://twitter.com" target="_blank"><span class="icon-twitter"></span></a>
+                            <a href="https://plus.google.com" target="_blank"><span class="icon-google-plus2"></span></a>
+                        </div>
+                    </div>
+                </article>
+                <article class="article-news">
+                    <h2>Nintendo sale en Marzo 2017 para que tengas mejor catálogo de juegos</h2>
+                    <img src="img/consoles/nintendo.jpg" alt="" />
+                    <p>
+                        Para Finales de este año 2016 parecía el momento indicado para el lanzamiento de la nueva consola de Nintendo pero los Nipones de la Big N no piensan lo mismo. “Creemos que al estrenar un nuevo hardware, la cantidad de software entre el que los consumidores
+                        pueden elegir y disfrutar durante el lanzamiento es muy importante, así que hemos escogido la fecha de lanzamiento en base a ese criterio”, ha dicho el presidente de la firma,Tatsumi Kimishima, a los accionistas. Obviamente, prosigue,
+                        entiende que aprovechar fechas tan señaladas como Acción de Gracias en Norteamérica o la Navidad en Occidente siempre es un punto a tener en cuenta por la “cantidad de dinero que se suele gastar en esas fechas. En cualquier caso”,
+                        apostilla, “nuestra estructura de hardware y software no termina a finales de año. Queremos que los usuarios puedan jugar con una consola durante años, así que debemos asegurarlo todo de cara al lanzamiento. No queremos apresurarnos
+                        solo por estar listos en Navidad”, añade el presidente de la Gran N.
+                        <img src="img/consoles/nx.jpg" alt="" /> Sabemos que las grandes compañias muchas veces expresan un inconveniente como que por ejemplo no vamos a tener lista la consola por problemas de costo para navidad y entonces lo transforman
+                        en te conviene que no la saque para que tengas mas títulos por jugar cuando salga o también a veces es un sentimiento loable pensando en los gamers o consumidores pero cuando llega la junta de accionista que son los que colocan
+                        el dinero dicen lo siento, muy bonita la propuesta pero si la consola está lista debe salir en la mejor época comercial del año, Noviembre o Diciembre.
                     </p>
                     <div class="options">
                         <div class="options-social">
@@ -204,12 +267,24 @@
     </div>
     <div class="social-bar">
         <ul>
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-twitter"></a></li>
-            <li><a href="#" class="icon-google-plus"></a></li>
-            <li><a href="#" class="icon-rss"></a></li>
-            <li><a href="#" class="icon-youtube-play"></a></li>
-            <li><a href="https://github.com/TheLoneGunmen" target="_blank" class="icon-github"></a></li>
+            <li>
+                <a href="#" class="icon-facebook"></a>
+            </li>
+            <li>
+                <a href="#" class="icon-twitter"></a>
+            </li>
+            <li>
+                <a href="#" class="icon-google-plus"></a>
+            </li>
+            <li>
+                <a href="#" class="icon-rss"></a>
+            </li>
+            <li>
+                <a href="#" class="icon-youtube-play"></a>
+            </li>
+            <li>
+                <a href="https://github.com/TheLoneGunmen" target="_blank" class="icon-github"></a>
+            </li>
         </ul>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
