--- a/news.html
+++ b/news.html
@@ -55,6 +55,60 @@
                     <input type="text" class="search-news form-control" placeholder="Buscar..." id="">
                     <input type="button" class="search-news btn" value="Filtrar">
                 </form>
+                <article class="article-news">
+                    <h2>Mitología griega y steampunk se unen en ILIOS: Betrayal of Gods</h2>
+                    <img src="img/news/ilios.png" alt="" />
+                    <p>
+                        El próximo martes, 17 de mayo, se iniciará la campaña de recaudación de fondos en Kickstarter para el proyecto ILIOS: Betrayal of Gods, un título independiente de Aurora Studio, que ha creado títulos como el juego de rol no oficial de Saint Seiya. En
+                        esta ocasión apuestan por la mitología griega para crer una aventura de acción en dos dimensiones y alta resolución que combinará el mundo clásico con la estética steampunk inspirándose fuertemente en los textos homéricos. Su objetivo
+                        será conseguir 100.000 dólares en Kickstarter para financiar el juego.
+                    </p>
+                    <div class="options">
+                        <div class="options-social">
+                            Compartir:
+                            <a href="https://www.facebook.com/" target="_blank"><span class="icon-facebook2"></span></a>
+                            <a href="https://twitter.com" target="_blank"><span class="icon-twitter"></span></a>
+                            <a href="https://plus.google.com" target="_blank"><span class="icon-google-plus2"></span></a>
+                        </div>
+                    </div>
+                </article>
+                <article class="article-news">
+                    <h2>Conoce el juego de Blancanieves que no pudo llegar al NES</h2>
+                    <img src="img/news/BN.jpg" alt="" />
+                    <p>
+                        Un coleccionista llamado Sean McGee encontró un prototipo de un juego de Blancanieves para NES que nunca fue publicado. La historia de este inusual hallazgo es la siguiente. En la década de los 90, el estudio japonés SOFEL tenía planeado lanzar un juego
+                        llamado Happily Ever After. Este título estaba basado en la película animada del mismo nombre que, en contraste con su precuela Snow White and the Seven Dwarfs, tuvo poco éxito. El fracaso del filme provocó que, pese a haber aparecido
+                        en varias revistas, este título fuera cancelado. El proyecto cambió de estudio desarrollador y se mudó a otra plataforma más poderosa: el Super NES, donde finalmente debutó en 1994. Durante muchos años, se pensó que a versión original
+                        de Happily Ever After se había perdido para siempre, hasta que hace poco Sean McGee se topó con un cartucho que sorpresivamente contenía el juego completo. Happily Ever After no era un juego casual, sino más bien difícil y requería
+                        que los jugadores efectuaran ataques y saltos precisos tan sólo para sobrevivir. Ahora que esta entrega ha sido preservada en formato digital es posible disfrutar de ella en emuladores. A continuación te invitamos a ver el juego
+                        en acción.
+                    </p>
+                    <div class="options">
+                        <div class="options-social">
+                            Compartir:
+                            <a href="https://www.facebook.com/" target="_blank"><span class="icon-facebook2"></span></a>
+                            <a href="https://twitter.com" target="_blank"><span class="icon-twitter"></span></a>
+                            <a href="https://plus.google.com" target="_blank"><span class="icon-google-plus2"></span></a>
+                        </div>
+                    </div>
+                </article>
+                <article class="article-news">
+                    <h2>Un estudio revela cual es el país mas interesado en la Realidad Virtual</h2>
+                    <img src="img/news/vr.jpg" alt="" />
+                    <p>
+                        Según un estudio que ha realizado Newzoo, el 16% de los españoles estan interesados con algún tipo de producto relacionado con la realidad virtual de aquí a los próximos seis meses. La metodología de estudio de Newzoo implica entrevistar a través de cuestionarios
+                        online a 3.000 americanos y 2.000 personas de otros países de Occidente, incluyendo España, Italia (cuyo interés está en el 13%) y Rusia, donde el 47% de los entrevistados respondieron que no estaban todavía seguros de si adquirirían
+                        un casco de realidad virtual este año. Comparando los resultados con el resto de países, en España es donde más interés existe en este nuevo tipo de tecnología, superando incluso a Estados Unidos (12%).
+                    </p>
+                    <div class="options">
+                        <div class="options-social">
+                            Compartir:
+                            <a href="https://www.facebook.com/" target="_blank"><span class="icon-facebook2"></span></a>
+                            <a href="https://twitter.com" target="_blank"><span class="icon-twitter"></span></a>
+                            <a href="https://plus.google.com" target="_blank"><span class="icon-google-plus2"></span></a>
+                        </div>
+                    </div>
+                </article>
                 <article id="nvidia" class="article-news">
                     <h2>Problemas con los nuevos drivers de NVIDIA</h2>
                     <img src="img/news/nvidia.jpg" alt="NVIDIA" />
@@ -218,12 +272,24 @@
     </div>
     <div class="social-bar">
         <ul>
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-twitter"></a></li>
-            <li><a href="#" class="icon-google-plus"></a></li>
-            <li><a href="#" class="icon-rss"></a></li>
-            <li><a href="#" class="icon-youtube-play"></a></li>
-            <li><a href="https://github.com/TheLoneGunmen" target="_blank" class="icon-github"></a></li>
+            <li>
+                <a href="#" class="icon-facebook"></a>
+            </li>
+            <li>
+                <a href="#" class="icon-twitter"></a>
+            </li>
+            <li>
+                <a href="#" class="icon-google-plus"></a>
+            </li>
+            <li>
+                <a href="#" class="icon-rss"></a>
+            </li>
+            <li>
+                <a href="#" class="icon-youtube-play"></a>
+            </li>
+            <li>
+                <a href="https://github.com/TheLoneGunmen" target="_blank" class="icon-github"></a>
+            </li>
         </ul>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
