--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,149 @@
-<div class="contenido">
-        <section class="main"></section>
-            <aside>
-                <div></div>
-                <div></div>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>SoloJuegos</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <link rel="stylesheet" href="./fonts/stylesheet.css">
+    <link rel="stylesheet" href="./css/estilos-dist.css">
+    <link rel="stylesheet" href="./css/fontastic.css">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+</head>
+
+<body>
+    <div id="header">
+        <header>
+            <h1><a class="tittle-style" href="index.html?pag=home">SOLO<span>JUEGOS<span></a></h1>
+            <div id="menu-header" class="menu-header">
+                <a href="#">Login</a>
+                <a href="./sitemap.html">Mapa del sitio</a>
+            </div>
+            <div id="main-nav" class="menu-bar">
+                <div class="uno"></div>
+                <div class="dos"></div>
+                <div class="tres"></div>
+            </div>
+        </header>
+
+        <nav id="menu">
+            <ul id="menu-items">
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./news.html">Noticias</a></li>
+                <li><a href="./consoles.html">Consolas</a></li>
+                <li><a href="./genders.html">Géneros</a></li>
+                <li><a href="./sagas.html">Sagas</a></li>
+                <li><a href="./about.html">Acerca de</a></li>
+                <li class="menu-items-header"><a href="./login.html">Login</a></li>
+                <li class="menu-items-header"><a href="./sitemap.html">Mapa del sitio</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <div id="contenedor" class="contenedor">
+        <div class="contenido">
+            <section class="main">
+              
+            </section>
+            <aside class="sidebar">
+                <div>
+                    <img src="img/Marcianito_1.gif" class="imgaside">
+                </div>
+                <div class="users-fans">
+                    <a href="#" class="users-fans-social social-facebook">
+                        <i class="icon-facebook"></i>Facebook
+                    </a>
+                    <a href="#" class="users-fans-social social-youtube">
+                        <i class="icon-youtube-play"></i>YouTube
+                    </a>
+                    <a href="#" class="users-fans-social social-googleplus">
+                        <i class="icon-google-plus"></i>Google+
+                    </a>
+                    <a href="#" class="users-fans-social social-twitter">
+                        <i class="icon-twitter"></i>Twitter
+                    </a>
+                </div>
             </aside>
-</div>
+        </div>
+    </div>
+
+    <div id="footer">
+        <footer>
+            <section class="final-last-footer">
+                <div class="footer-child social">
+                    <h3 class="tittle-style">Solo<span>Juegos</span></h3>
+                    <p>Aenean sodales eros ac scelerisque sagittis. Aliquam porta consectetur blandit. Nulla sed augue nisl. Vivamus pulvinar ullamc orper malesuada.</p>
+                    <p>Suspendisse ornare velit eget dolor fringilla, et imperdiet ipsum convallis. Integer faucibus, felis nec lobortis hendrerit, augue mi mattis massa, vitae lobortis neque nunc ut eros. Donec massa lectus</p>
+                </div>
+                <div class="footer-child contacto">
+                    <h3 class="footer-tittle-entry">ÚLTIMOS ARTÍCULOS</h3>
+                    <section class="last-articles">
+                        <img class="last-image-preview" src="img/news/starwars.jpeg" alt="" />
+                        <a href="#">Ya está disponible la actualización gratuita de marzo de Star Wars: Battlefront</a>
+                    </section class="last-articles">
+                    <section class="last-articles">
+                        <img class="last-image-preview" src="img/news/lionhead.jpg" alt="" />
+                        <a href="#">Microsoft cancela Fable Legends y negocia el cierre de Lionhead Studios</a>
+                    </section>
+                    <section class="last-articles">
+                        <img class="last-image-preview" src="img/consoles/nostalgic.jpg" alt="" />
+                        <a href="#">Ediciones de consolas solo para nostálgicos</a>
+                    </section>
+                </div>
+                <div class="footer-child gallery">
+                    <h3 class="footer-tittle-entry">ÚLTIMAS IMÁGENES</h3>
+                    <section class="last-images">
+                        <div class="gallery-row">
+                            <img src="img/zelda.jpg" alt="">
+                            <img src="img/EURO.jpg" alt="">
+                            <img src="img/sf.jpg" alt="">
+                        </div>
+                        <div class="gallery-row">
+                            <img src="img/consoles/mg.jpg" alt="">
+                            <img src="img/news/starwars.jpeg" alt="">
+                            <img src="img/consoles/nostalgic.jpg" alt="">
+                        </div>
+                    </section>
+                </div>
+            </section>
+            <div class="footer-legal">
+                <p>Copyright (c) 2016 Copyright Holder All Rights Reserved.</p>
+                <ul class="legal-social">
+                    <li><a href="#"><i class="icon-facebook"></i></a></li>
+                    <li><a href="#"><i class="icon-twitter"></i></a></li>
+                    <li><a href="#"><i class="icon-google-plus"></i></a></li>
+                    <li><a href="#"><i class="icon-youtube-play"></i></a></li>
+                    <li><a href="https://github.com/TheLoneGunmen" target="_blank"><i class="icon-github"></i></a></li>
+                </ul>
+            </div>
+        </footer>
+    </div>
+    <div class="social-bar">
+        <ul>
+            <li>
+                <a href="#" class="icon-facebook"></a>
+            </li>
+            <li>
+                <a href="#" class="icon-twitter"></a>
+            </li>
+            <li>
+                <a href="#" class="icon-google-plus"></a>
+            </li>
+            <li>
+                <a href="#" class="icon-rss"></a>
+            </li>
+            <li>
+                <a href="#" class="icon-youtube-play"></a>
+            </li>
+            <li>
+                <a href="https://github.com/TheLoneGunmen" target="_blank" class="icon-github"></a>
+            </li>
+        </ul>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="js/main.js"></script>
+</body>
+
+</html>
