Agrego fuentes y mapa del sitio

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="./fonts/stylesheet.css">
     <link rel="stylesheet" href="./css/estilos-dist.css">
+    <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./css/fontastic.css">
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -61,7 +62,7 @@
                       <div class="texbox">
                           <a href="/consoles.html" class="clicked-c"><h3>PlayStation</h3></a>
                           <a href="/consoles.html" class="clicked-c">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                              <p>Consola producida por Sony.</p>
                           </a>
                       </div>
                   </div>
@@ -70,7 +71,7 @@
                       <div class="texbox">
                           <a href="/consoles.html" class="clicked-c"><h3>Xbox</h3></a>
                           <a href="/consoles.html" class="clicked-c">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                              <p>Consola producida por Microsoft</p>
                           </a>
                       </div>
                   </div>
@@ -79,7 +80,7 @@
                       <div class="texbox">
                           <a href="/consoles.html" class="clicked-c"><h3>Nintendo</h3></a>
                           <a href="/consoles.html" class="clicked-c">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                              <p>Actualmente con 13 consolas.</p>
                           </a>
                       </div>
                   </div>
