--- a/sitemap.html
+++ b/sitemap.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./fonts/stylesheet.css">
     <link rel="stylesheet" href="./css/estilos-dist.css">
     <link rel="stylesheet" href="./css/fontastic.css">
@@ -45,7 +46,15 @@
     <div id="contenedor" class="contenedor">
         <div class="contenido">
             <section class="main">
-              
+                <h1 class="tittle tittle-style">Mapa del sitio</h1>
+                <li><a class="sitemap-link" href="index.html">Inicio</a></li>
+                <li><a class="sitemap-link" href="news.html">Noticias</a></li>
+                <li><a class="sitemap-link" href="consoles.html">Consolas</a></li>
+                <li><a class="sitemap-link" href="genders.html">Generos</a></li>
+                <li><a class="sitemap-link" href="sagas.html">Sagas</a></li>
+                <li><a class="sitemap-link" href="about.html">Acerca de</a></li>
+                <li><a class="sitemap-link" href="login.html">Login</a></li>
+                <li><a class="sitemap-link" href="#">Mapa del sitio</a></li>
             </section>
             <aside class="sidebar">
                 <div>
