Se arreglo los estilos del login, fuentes, se hizo la validacion del login

--- a/genders.html
+++ b/genders.html
@@ -61,13 +61,13 @@
                     <img data-enlace="https://www.youtube.com/embed/qArxw_RQV9U" class="image-video" src="http://img.youtube.com/vi/qArxw_RQV9U/hqdefault.jpg" alt=""></a></li>
                 <li>
                   <a href="#">
-                    <img data-enlace="https://www.youtube.com/embed/YhiP5FBcCXc" class="image-video" src="http://img.youtube.com/vi/YhiP5FBcCXc/hqdefault.jpg" alt=""></a></li>
+                    <img data-enlace="https://www.youtube.com/embed/F80Wv66GYSs" class="image-video" src="http://img.youtube.com/vi/F80Wv66GYSs/hqdefault.jpg" alt=""></a></li>
                 <li>
                   <a href="#">
-                    <img data-enlace="https://www.youtube.com/watch?v=CfihYWRWRTQ" class="image-video" src="http://lorempixel.com/400/200/sports/Dummy-Text" alt=""></a></li>
+                    <img data-enlace="https://www.youtube.com/embed/NOzjHluBwds" class="image-video" src="http://img.youtube.com/vi/NOzjHluBwds/hqdefault.jpg" alt=""></a></li>
                 <li>
                   <a href="#">
-                    <img data-enlace="https://www.youtube.com/watch?v=CfihYWRWRTQ" class="image-video" src="http://lorempixel.com/400/200/sports/Dummy-Text" alt=""></a></li>
+                    <img data-enlace="https://www.youtube.com/embed/2h-Kycm8Jxo" class="image-video" src="http://img.youtube.com/vi/2h-Kycm8Jxo/hqdefault.jpg" alt=""></a></li>
             </ul>
             <iframe id="video-slider" width="854" height="480" src="https://www.youtube.com/embed/b6zV48U87Vs" frameborder="0" allowfullscreen></iframe>
         </div>
