--- a/login.html
+++ b/login.html
@@ -10,76 +10,100 @@
     <link rel="stylesheet" href="./css/estilos-dist.css">
     <link rel="stylesheet" href="./css/fontastic.css">
     <link rel="stylesheet" href="css/estilos.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/animate.css">
+    <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet' type='text/css'>
     <meta name="description" content="">
     <meta name="keywords" content="">
 </head>
 
 <body style="background:#292828" id="loge">
-	<a class="anclaje" id="irregister"></a>
-	<a class="anclaje" id="irlogin"></a>
-	<div id="envoltura">
-    <h1><a class="titulo" href="index.html?pag=home">SOLO<span>JUEGOS</span></a></h1>
-    <div class="contlogin animate">
-        <form id="login"  action="login-php">
-            <h1 class="titulo">Login</h1>
-            <p>
-                <label>Usuario</label>
-                <input type="text" name="usernam" placeholder="Ingrese nombre de usuario">
-            </p>
-            <p>
-               <label>Contraseña</label>
-               <input type="password" name="userpass" placeholder="Ingrese contraseña"> 
-            </p>
-            <p class="sesion">
-               <input type="checkbox" name="nocerrar" value="nocerrar">
-               <label>No cerrar sesión</label>
-            </p>
-            <p>
-				<center>
-                <input type="submit" class="boton" value="Entrar">
-				</center>
-            </p>
-            <p>
-               <label>¿No eres miembro?
-               <a href="#irregister" class="link-registrarse">Registrarse</a>
-			   </label>
-            </p>
-        </form>
+    <a class="anclaje" id="irregister"></a>
+    <a class="anclaje" id="irlogin"></a>
+    <div id="envoltura">
+        <h1><a class="tittle-style" href="index.html">SOLO<span>JUEGOS</span></a></h1>
+        <div class="contlogin animate">
+            <form id="login" method="post">
+                <h1 class="tittle-style">Login</h1>
+                <p>
+                    <label for="username">Usuario</label>
+                    <input type="text" class="login-input" name="username" id="username" placeholder="Usuario">
+                </p>
+                <p>
+                    <label for="password">Contraseña</label>
+                    <input type="password" class="login-input" name="password" id="password" placeholder="Contraseña">
+                </p>
+                <p class="sesion">
+                    <input type="checkbox" name="signout" id="signout" value="nocerrar">
+                    <label for="signout">No cerrar sesión</label>
+                </p>
+                <p>
+                    <input type="submit" class="boton" id="btnLogin" value="Entrar">
+                </p>
+                <p>
+                    <label>¿No eres miembro?
+                        <a href="#irregister" class="link-registrarse">Registrarse</a>
+                    </label>
+                </p>
+            </form>
+        </div>
+        <div class="contregister animate">
+            <form id="registro" method="post">
+                <h1 class="tittle-style register-login">Registrarse</h1>
+                <p>
+                    <label for="useremail">Correo</label>
+                    <input type="email" class="login-input" name="email" id="useremail" placeholder="micorreo@correo" required>
+                </p>
+                <p>
+                    <label for="user">Usuario</label>
+                    <input type="text" class="login-input" name="usernam" id="user" placeholder="Usuario" required>
+                </p>
+                <p>
+                    <label for="userpass">Contraseña</label>
+                    <input type="password" class="login-input" name="userpass" id="userpass" placeholder="Contraseña" required>
+                </p>
+                <p>
+                    <label for="confirmuserpass">Confirmar contraseña</label>
+                    <input type="password" class="login-input" name="confirmuserpass" id="confirmuserpass" placeholder="Contraseña" required>
+                </p>
+                <p>
+                    <input type="submit" class="boton" id="checkin" value="Registrar">
+                </p>
+                <p>
+                    <label>¿Ya eres miembro?
+                        <a href="#irlogin" class="link-entrar">Entrar</a>
+                    </label>
+                </p>
+            </form>
+        </div>
     </div>
-    <div class="contregister animate">
-        <form id="registro" action="registro.php">
-            <h1 class="titulo">Registrarse</h1>
-            <p>
-                <label>Correo</label>
-                <input type="email" name="email" placeholder="micorreo@correo">
-            </p>
-            <p>
-                <label>Usuario</label>
-                <input type="text" name="usernam" placeholder="Nombre de usuario">
-            </p>
-            <p>
-               <label>Contraseña</label>
-               <input type="password" name="userpass" placeholder="Ingrese contraseña"> 
-            </p>
-            <p>
-               <label>Confirmar contraseña</label>
-               <input type="password" name="confirmuserpass" placeholder="Ingrese contraseña"> 
-            </p>
-            <p>
-				<center>
-                <input type="submit" class="boton" value="Registrar">
-				</center>
-            </p>
-            <p>
-                <label>¿Ya eres miembro?
-                <a href="#irlogin" class="link-entrar">Entrar</a>
-				</label>
-            </p>
-        </form>
-    </div>
-	</div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script type="text/javascript">
+        // Validación formulario
+        var $username = $("#username");
+        var $password = $("#password");
+        var $btnLogin = $("#btnLogin");
+
+        function validateUser(e) {
+            if ($username.val() === "") {
+                $username.addClass("login-input-warning");
+                $username.focus();
+                return false;
+            }
+            if ($password.val() === "") {
+                $password.addClass("login-input-warning");
+                $password.focus();
+                return false;
+            }
+        }
+
+        $btnLogin.on("click", validateUser);
+        $username.on("keyup", function() {
+          $username.removeClass("login-input-warning");
+        });
+        $password.on("keyup", function () {
+          $password.removeClass("login-input-warning");
+        });
+    </script>
 </body>
 
 </html>
