--- a/login.html
+++ b/login.html
@@ -26,10 +26,12 @@
                 <h1 class="tittle-style">Login</h1>
                 <p>
                     <label for="username">Usuario</label>
+                    <div id="userloginError" class="div-error">El usuario no existe</div>
                     <input type="text" class="login-input" name="username" id="username" placeholder="Usuario">
                 </p>
                 <p>
                     <label for="password">Contraseña</label>
+                    <div id="passloginError" class="div-error">Las contraseña es incorrcta</div>
                     <input type="password" class="login-input" name="password" id="password" placeholder="Contraseña">
                 </p>
                 <p class="sesion">
@@ -51,19 +53,25 @@
                 <h1 class="tittle-style register-login">Registrarse</h1>
                 <p>
                     <label for="useremail">Correo</label>
-                    <input type="email" class="login-input" name="email" id="useremail" placeholder="micorreo@correo" required>
+                    <div id="useremailError" class="div-error">
+                      Por favor ingrese un correo electrónico en el formato alguien@example.com
+                    </div>
+                    <input type="email" class="login-input" name="email" id="useremail" placeholder="micorreo@correo">
                 </p>
                 <p>
                     <label for="user">Usuario</label>
-                    <input type="text" class="login-input" name="usernam" id="user" placeholder="Usuario" required>
+                    <div id="usernameError" class="div-error">Por favor ingrese un usuario</div>
+                    <input type="text" class="login-input" name="usernam" id="user" placeholder="Usuario">
                 </p>
                 <p>
                     <label for="userpass">Contraseña</label>
-                    <input type="password" class="login-input" name="userpass" id="userpass" placeholder="Contraseña" required>
+                    <div id="passwordError" class="div-error">Por favor ingrese una contraseña</div>
+                    <input type="password" class="login-input" name="userpass" id="userpass" placeholder="Contraseña">
                 </p>
                 <p>
                     <label for="confirmuserpass">Confirmar contraseña</label>
-                    <input type="password" class="login-input" name="confirmuserpass" id="confirmuserpass" placeholder="Contraseña" required>
+                    <div id="confirmError" class="div-error">Por favor ingrese una contraseña</div>
+                    <input type="password" class="login-input" name="confirmuserpass" id="confirmuserpass" placeholder="Contraseña">
                 </p>
                 <p>
                     <input type="submit" class="boton" id="checkin" value="Registrar">
@@ -77,33 +85,7 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script type="text/javascript">
-        // Validación formulario
-        var $username = $("#username");
-        var $password = $("#password");
-        var $btnLogin = $("#btnLogin");
-
-        function validateUser(e) {
-            if ($username.val() === "") {
-                $username.addClass("login-input-warning");
-                $username.focus();
-                return false;
-            }
-            if ($password.val() === "") {
-                $password.addClass("login-input-warning");
-                $password.focus();
-                return false;
-            }
-        }
-
-        $btnLogin.on("click", validateUser);
-        $username.on("keyup", function() {
-          $username.removeClass("login-input-warning");
-        });
-        $password.on("keyup", function () {
-          $password.removeClass("login-input-warning");
-        });
-    </script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
